<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flight Booker</string>
    <string name="action_settings">Settings</string>
    <string name="quoteButton">FIND FLIGHTS</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="choose_origin">Choose Origin</string>
    <string name="choose_destination">Choose Destination</string>
    <string name="header">Flight Booker</string>
    <string name="sendEmail">SEND EMAIL</string>

    <string-array name="flight_origins">
        <item>Cork</item>
        <item>Dublin</item>
        <item>London</item>
        <item>Belfast</item>
        <item>Paris</item>
        <item>Rome</item>
    </string-array>
    <string-array name="flight_destinations">
        <item>Rome</item>
        <item>Paris</item>
        <item>Belfast</item>
        <item>London</item>
        <item>Dublin</item>
        <item>Cork</item>
    </string-array>

    <string name="title_activity_sender">SenderActivity</string>

    <string-array name="intent_email">
        <item>brian.coveney@mycit.ie</item>
        <item>bricoveney@yahoo.co.uk</item>
    </string-array>

    <string name="intentSubject">Flight Info</string>
    <string name="default_message">The flights you have chosen are:</string>
    <string name="emailMessage1">The flights you have booked, on our new Android app, are:</string>
    <string name="emailMessage2">\n\nWe hope you enjoy flying with us!</string>
    <string name="dialog_send_email">Contact Us</string>
    <string name="send">SEND ENQUIRY</string>
    <string name="cancel">CANCEL</string>
    <string name="flights_chosen">Flights Chosen:</string>
    <string name="show_file">SHOW FILE</string>
    <string name="hide_file">HIDE FILE</string>
    <string name="toggle_btn">SHOW/HIDE</string>
    <string name="radioBtn1">Round Trip</string>
    <string name="radioBtn2">One Way</string>


</resources>
