<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:layout_weight="1">


    <Spinner
        android:entries="@array/flight_origins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/origin_spinner"
        android:layout_gravity="center_horizontal"
        android:prompt="@string/choose_origin"
        android:spinnerMode="dialog"
        android:layout_below="@+id/textView"
        android:textSize="18dp"
        android:layout_alignParentStart="true" />

    <Spinner
        android:entries="@array/flight_destinations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/destination_spinner"
        android:layout_gravity="center_horizontal"
        android:prompt="@string/choose_destination"
        android:spinnerMode="dialog"
        android:layout_below="@+id/textView2"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/from"
        android:id="@+id/textView"
        android:textSize="18dp"
        android:layout_marginTop="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/to"
        android:id="@+id/textView2"
        android:textSize="18dp"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/origin_spinner"
        android:layout_alignStart="@+id/find_flights_button" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quoteButton"

        android:textColor="@color/deep_red"

        android:id="@+id/find_flights_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/mybutton"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/destination_spinner"
        android:layout_alignParentEnd="true"
        android:id="@+id/radioButtonAll"
        android:layout_marginTop="179dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioBtn1"
            android:id="@+id/radioButton1"
            android:textSize="18dp"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioBtn2"
            android:textSize="18dp"
            android:id="@+id/radioButton2" />
    </RadioGroup>


</RelativeLayout>