<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/flightDisplayField"
        style="@style/style1"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/emailButton" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendEmail"
        android:id="@+id/emailButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="5dp"
        android:background="@drawable/mybutton"
        android:layout_below="@+id/flightsChosen"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_file"
        android:id="@+id/fileButton"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="0dp"
        style="?android:attr/buttonStyleSmall"
        android:padding="5dp"
        android:background="@drawable/mybutton"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/emailButton"
        android:layout_toStartOf="@+id/flightDisplayField"
        android:layout_alignEnd="@+id/flightsChosen" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fileOriginsTv"
        android:textSize="18dp"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/flightsChosen"
        android:layout_alignParentBottom="true"
        android:background="#58857e"
        android:autoText="false"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flights_chosen"
        android:id="@+id/flightsChosen"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="16dp"
        android:layout_alignBottom="@+id/flightDisplayField"
        android:layout_alignParentStart="true"
        android:layout_marginStart="28dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hide_file"
        android:id="@+id/hideFileButton"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="0dp"
        android:padding="5dp"
        android:background="@drawable/mybutton"
        android:layout_alignBottom="@+id/fileButton"
        android:layout_alignEnd="@+id/emailButton"
        android:layout_toEndOf="@+id/fileButton"
        android:layout_alignTop="@+id/fileButton" />

    <ToggleButton
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_btn"
        android:id="@+id/toggleShowHide"
        android:layout_below="@+id/hideFileButton"
        android:layout_marginTop="47dp"
        android:layout_alignEnd="@+id/hideFileButton"
        android:layout_alignStart="@+id/fileButton"
        android:background="@drawable/mybutton"
        android:textOn="HIDE"
        android:textOff="SHOW"
        />







</RelativeLayout>